--- a/src/components/ui/Layout.css
+++ b/src/components/ui/Layout.css
@@ -5,7 +5,6 @@
 }
 
 :root {
-  /* COLORS */
   --BGCOLOR: #1e1e1e;
   --BORDER-COLOR: #FFF;
   --COLOR: #8f8e8e;
@@ -21,17 +20,20 @@
   --INPUT-INVALID: #F00;
 }
 
-/* || UTILITY CLASSES */
+.ErrMsgWrapper {
+  width: 18rem;
+}
+
 .errmsg {
   display: inline-block;
-  background-color: var(--TABLE-BGCOLOR);
-  color: var(--ERROR);
+  background-color: #fff;
+  color: #b50000;
   padding: 0.25em;
   margin-bottom: 0.5em;
 }
 
 .errmsg a:any-link {
-  color: var(--ERROR);
+  color: #b50000;
   text-decoration: underline;
 }
 
@@ -45,7 +47,7 @@
   font-size: 2.5rem;
   background-color: transparent;
   border: none;
-  color: var(--COLOR);
+  color: #8f8e8e;
   display: grid;
   place-content: center;
 }
@@ -75,8 +77,8 @@ a:-webkit-any-link {
 header {
   height: 5rem;
   min-height: 5rem;
-  background-color: var(--BGCOLOR);
-  color: var(--COLOR);
+  background-color: #1e1e1e;
+  color: #8f8e8e;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -92,7 +94,7 @@ header {
 nav {
   position: fixed;
   background-color: rgba(0, 0, 0, 0.9);
-  color: var(--COLOR);
+  color: #8f8e8e;
   top: 0;
   width: 280px;
   transform: translateX(-100%);
@@ -184,8 +186,8 @@ nav li:hover {
 footer {
   height: 3rem;
   min-height: 3rem;
-  background-color: var(--BGCOLOR);
-  color: var(--COLOR);
+  background-color: #1e1e1e;
+  color: #8f8e8e;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -196,7 +198,7 @@ footer {
 }
 
 footer a {
-  color: var(--COLOR);
+  color: #8f8e8e;
   transition: hover 0.6s;
 }
 
@@ -206,7 +208,7 @@ footer a:hover {
 }
 
 .title {
-  color: white;
+  color: #ffffff;
   position: absolute;
   margin-left: 4rem;
   font-size: 2rem;
@@ -297,9 +299,8 @@ tr:nth-child(even) {
   background-color: #e3e3e3;
 }
 
-tr:hover {
-  background-color: #070606;
-  color: var(--COLOR);
+tbody tr:hover {
+  background-color: #509de4;
   transition: 0.6s;
 }
 
@@ -632,6 +633,26 @@ button[disabled]:hover {
   transition: 0.6s;
 }
 
+.RemoveAnswerButton {
+  background-color: #c5c5c5;
+  color: #000;
+  border-radius: 2px;
+  height: 1.3rem;
+  margin-top: 4px;
+  margin-left: 1rem;
+  width: 1.3rem;
+  border: 1px;
+  margin-right: 3px;
+  transition: 0.6s;
+  padding-top: 2px;
+
+}
+
+.RemoveAnswerButton:hover {
+  background-color: #ed2424;
+  transition: 0.6s;
+}
+
 .ExportButton {
   background-color: #c5c5c5;
   color: #000;
@@ -645,6 +666,24 @@ button[disabled]:hover {
 
 .ExportButton:hover {
   background-color: #e62de3;
+  transition: 0.6s;
+}
+
+.SortButton {
+  background-color: #ffffff;
+  border-radius: 2px;
+  font-size: 1rem;
+  color: #000;
+  height: 2rem;
+  padding-right: 0.3rem;
+  padding-left: 0.3rem;
+  border: 1px;
+  margin-top: 4px;
+  margin-right: 3px;
+}
+
+.SortButton:hover {
+  background-color: #509de4;
   transition: 0.6s;
 }
 
@@ -713,18 +752,18 @@ button[disabled]:hover {
 }
 
 .valid {
-  color: limegreen;
+  color: rgb(50, 203, 50);
   margin-left: 0.25rem;
 }
 
 .invalid {
-  color: red;
+  color: rgb(254, 0, 0);
   margin-left: 0.25rem;
 }
 
 .errmsg {
-  background-color: lightpink;
-  color: firebrick;
+  background-color: rgb(254, 146, 162);
+  color: rgb(178, 34, 34);
   font-weight: bold;
   padding: 0.5rem;
   margin-bottom: 0.5rem;
